--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,19 @@
     "tasks": [
 
         {
+            "label": "build-sandbox-Sandbox3",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/sandbox/Sandbox/Sandbox3.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        
+        {
             "label": "build-sandbox-Sandbox2",
             "command": "dotnet",
             "type": "process",
